Fix UI jumps (#25)

--- a/app/App/Panel/Main/Signer/style/index.styl
+++ b/app/App/Panel/Main/Signer/style/index.styl
@@ -446,7 +446,10 @@
     position relative
     display flex
     justify-content center
+    transition standard
     padding 20px 0px 20px 0px
+    height 120px
+    overflow hidden
 
     .trezorPinInput
       display flex
